*Admin Portal:* - Fixed scroll issue on homepage due to fixes header - SubscriptionsPage: Horizontal scroll on subscriptions table - SubscriptionLogDetails: Vertical scroll on logs popup - LogDetails, ChangePlan, ChangeQuantity modals rendered correctly (using PartialView not Full View) *Customer Portal:* - SubscriptionLogDetails: Vertical scroll on logs popup - SubscriptionLogDetails: Fix issue when no logs present - LogDetails, ChangePlan, ChangeQuantity modals rendered correctly (using PartialView not Full View)

--- a/src/AdminSite/wwwroot/css/admin-custom.css
+++ b/src/AdminSite/wwwroot/css/admin-custom.css
@@ -492,14 +492,6 @@ button.navbar-toggler:focus, button.navbar-toggler:hover {
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
 
-/* Modal Content/Box */
-.modal-content {
-    background-color: #fefefe;
-    margin: 15% auto; /* 15% from the top and centered */
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
-}
 
 .modal-backdrop {
     z-index: -1;
